; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_shader_sm1.c_shader_sm1_read_src_param.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_shader_sm1.c_shader_sm1_read_src_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_sm1_data = type { i32 }
%struct.wined3d_shader_src_param = type { i32 }

@WINED3D_SM1_ADDRESS_MODE_RELATIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_sm1_data*, i32**, %struct.wined3d_shader_src_param*, %struct.wined3d_shader_src_param*)* @shader_sm1_read_src_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shader_sm1_read_src_param(%struct.wined3d_sm1_data* %0, i32** %1, %struct.wined3d_shader_src_param* %2, %struct.wined3d_shader_src_param* %3) #0 {
  %5 = alloca %struct.wined3d_sm1_data*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca %struct.wined3d_shader_src_param*, align 8
  %8 = alloca %struct.wined3d_shader_src_param*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.wined3d_sm1_data* %0, %struct.wined3d_sm1_data** %5, align 8
  store i32** %1, i32*** %6, align 8
  store %struct.wined3d_shader_src_param* %2, %struct.wined3d_shader_src_param** %7, align 8
  store %struct.wined3d_shader_src_param* %3, %struct.wined3d_shader_src_param** %8, align 8
  %11 = load %struct.wined3d_sm1_data*, %struct.wined3d_sm1_data** %5, align 8
  %12 = load i32**, i32*** %6, align 8
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @shader_get_param(%struct.wined3d_sm1_data* %11, i32* %13, i32* %9, i32* %10)
  %15 = load i32**, i32*** %6, align 8
  %16 = load i32*, i32** %15, align 8
  %17 = sext i32 %14 to i64
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  store i32* %18, i32** %15, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* @WINED3D_SM1_ADDRESS_MODE_RELATIVE, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %31

23:                                               ; preds = %4
  %24 = load i32, i32* %10, align 4
  %25 = load %struct.wined3d_shader_src_param*, %struct.wined3d_shader_src_param** %8, align 8
  %26 = call i32 @shader_parse_src_param(i32 %24, %struct.wined3d_shader_src_param* null, %struct.wined3d_shader_src_param* %25)
  %27 = load i32, i32* %9, align 4
  %28 = load %struct.wined3d_shader_src_param*, %struct.wined3d_shader_src_param** %8, align 8
  %29 = load %struct.wined3d_shader_src_param*, %struct.wined3d_shader_src_param** %7, align 8
  %30 = call i32 @shader_parse_src_param(i32 %27, %struct.wined3d_shader_src_param* %28, %struct.wined3d_shader_src_param* %29)
  br label %35

31:                                               ; preds = %4
  %32 = load i32, i32* %9, align 4
  %33 = load %struct.wined3d_shader_src_param*, %struct.wined3d_shader_src_param** %7, align 8
  %34 = call i32 @shader_parse_src_param(i32 %32, %struct.wined3d_shader_src_param* null, %struct.wined3d_shader_src_param* %33)
  br label %35

35:                                               ; preds = %31, %23
  ret void
}

declare dso_local i32 @shader_get_param(%struct.wined3d_sm1_data*, i32*, i32*, i32*) #1

declare dso_local i32 @shader_parse_src_param(i32, %struct.wined3d_shader_src_param*, %struct.wined3d_shader_src_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
